--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             padding: 60 px;
             background: #BBB1A5;
         }
+        .page{
+            padding: 50px;
+            max-width: 1200px;
+        }
     
         .grid{
             display: grid;
@@ -33,6 +37,7 @@
   </style>
 </head>
 <body>
+    <div class="page"></div>
   <h1>Image Grid</h1>
   <div class="grid">
     <img src="images/Asset 5.png" alt="Asset 5">
