--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             background: #BBB1A5;
         }
         .page{
-            padding: 50px;
+            padding: 0 50px;
             max-width: 1200px;
+            margin: 0 auto;
         }
     
         .grid{
