--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="page"></div>
   <h1>Image Grid</h1>
   <div class="grid">
-    <img src="images/Asset 5.png" alt="Asset 5">
+    <a href="one/"></a><img src="images/Asset 5.png" alt="Asset 5">></a>
     <img src="images/Asset 6.png" alt="Asset 6">
     <img src="images/Asset 7.png" alt="Asset 7">
     <img src="images/Asset 8.png" alt="Asset 8">
