--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             max-width: 1200px;
             margin: 0 auto;
         }
+        h1{
+            color: #CCE100;
+        }
     
         .grid{
             display: grid;
@@ -39,7 +42,7 @@
 </head>
 <body>
     <div class="page"></div>
-  <h1>Image Grid</h1>
+  <h1>This is a growing collection.</h1>
   <div class="grid">
     <a href="one/"><img src="images/Asset 5.png" alt="Asset 5">></a>
     <a href="two/"><img src="images/Asset 6.png" alt="Asset 6">></a>
