--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       border-radius: 8px;
       object-fit: cover;
       transition: transform 0.2s ease;
+      mix-blend-mode: color-burn;
     }
     .grid img:hover {
       transform: scale(1.05);
