--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       object-fit: cover;
       transition: transform 0.2s ease;
       mix-blend-mode: color-burn;
+      filter: brightness(0.8) sepia(1) hue-rotate(250deg) saturate(3);
     }
     .grid img:hover {
       transform: scale(1.05);
