--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       border-radius: 8px;
       object-fit: cover;
       transition: transform 0.2s ease;
-      mix-blend-mode: color-burn;
-      filter: brightness(0.8) sepia(1) hue-rotate(250deg) saturate(3);
+      mix-blend-mode: screen;
+      filter: brightness(0.8) sepia(1) hue-rotate(250deg);
     }
     .grid img:hover {
       transform: scale(1.05);
