--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       object-fit: cover;
       transition: transform 0.2s ease;
       mix-blend-mode: screen;
-      filter: brightness(0.8) sepia(1) hue-rotate(250deg);
+      filter: brightness(0.8) sepia(1) hue-rotate(250deg) saturate(3);
     }
     .grid img:hover {
       transform: scale(1.05);
