--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     a::after {
       content: none;
     }
+    a::before,
+a::after {
+  content: none !important;
+}
         body{
             font-family: 'DM Sans', sans-serif;
             margin: 0;
