remove arrows again

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@ a::after {
     .grid img:hover {
       transform: scale(1.05);
     }
+    li::before,
+li::after {
+  content: none !important;
+}
   </style>
 </head>
 <body>
