--- a/index.html
+++ b/index.html
@@ -67,27 +67,27 @@ li::after {
     <div class="page"></div>
   <h1>This is a growing collection.</h1>
   <div class="grid">
-    <a href="one/"><img src="images/Asset 5.png" alt="Asset 5">></a>
-    <a href="two/"><img src="images/Asset 6.png" alt="Asset 6">></a>
-    <a href="three/"><img src="images/Asset 7.png" alt="Asset 7">></a>
-    <a href="four/"><img src="images/Asset 8.png" alt="Asset 8">></a>
-    <a href="five/"><img src="images/Asset 9.png" alt="Asset 9">></a>
-    <a href="six/"><img src="images/Asset 10.png" alt="Asset 10">></a>
-    <a href="seven/"><img src="images/Asset 11.png" alt="Asset 11">></a>
-    <a href="eight/"><img src="images/Asset 12.png" alt="Asset 12">></a>
-    <a href="nine/"><img src="images/Asset 13.png" alt="Asset 13">></a>
-    <a href="ten/"><img src="images/Asset 14.png" alt="Asset 14">></a>
-    <a href="eleven/"><img src="images/Asset 15.png" alt="Asset 15">></a>
-    <a href="twelve/"><img src="images/Asset 16.png" alt="Asset 16">></a>
-    <a href="thirteen/"><img src="images/Asset 17.png" alt="Asset 17">></a>
-    <a href="fourteen/"><img src="images/Asset 18.png" alt="Asset 18">></a>
-    <a href="fifteen/"><img src="images/Asset 19.png" alt="Asset 19">></a>
-    <a href="sixteen/"><img src="images/Asset 20.png" alt="Asset 20">></a>
-    <a href="seventeen/"><img src="images/Asset 21.png" alt="Asset 21">></a>
-    <a href="eighteen/"><img src="images/Asset 22.png" alt="Asset 22">></a>
-    <a href="nineteen/"><img src="images/Asset 23.png" alt="Asset 23">></a>
-    <a href="twenty/"><img src="images/Asset 24.png" alt="Asset 24">></a>
-    <a href="twenty-one/"><img src="images/Asset 25.png" alt="Asset 25">></a>
+    <a href="one/"><img src="images/Asset 5.png" alt="Asset 5"></a>
+    <a href="two/"><img src="images/Asset 6.png" alt="Asset 6"></a>
+    <a href="three/"><img src="images/Asset 7.png" alt="Asset 7"></a>
+    <a href="four/"><img src="images/Asset 8.png" alt="Asset 8"></a>
+    <a href="five/"><img src="images/Asset 9.png" alt="Asset 9"></a>
+    <a href="six/"><img src="images/Asset 10.png" alt="Asset 10"></a>
+    <a href="seven/"><img src="images/Asset 11.png" alt="Asset 11"></a>
+    <a href="eight/"><img src="images/Asset 12.png" alt="Asset 12"></a>
+    <a href="nine/"><img src="images/Asset 13.png" alt="Asset 13"></a>
+    <a href="ten/"><img src="images/Asset 14.png" alt="Asset 14"></a>
+    <a href="eleven/"><img src="images/Asset 15.png" alt="Asset 15"></a>
+    <a href="twelve/"><img src="images/Asset 16.png" alt="Asset 16"></a>
+    <a href="thirteen/"><img src="images/Asset 17.png" alt="Asset 17"></a>
+    <a href="fourteen/"><img src="images/Asset 18.png" alt="Asset 18"></a>
+    <a href="fifteen/"><img src="images/Asset 19.png" alt="Asset 19"></a>
+    <a href="sixteen/"><img src="images/Asset 20.png" alt="Asset 20"></a>
+    <a href="seventeen/"><img src="images/Asset 21.png" alt="Asset 21"></a>
+    <a href="eighteen/"><img src="images/Asset 22.png" alt="Asset 22"></a>
+    <a href="nineteen/"><img src="images/Asset 23.png" alt="Asset 23"></a>
+    <a href="twenty/"><img src="images/Asset 24.png" alt="Asset 24"></a>
+    <a href="twenty-one/"><img src="images/Asset 25.png" alt="Asset 25"></a>
     
   </div>
 
