--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ a::after {
             background: #BBB1A5;
         }
         .page{
-            padding: 0 50px;
+            padding: 50px;
             max-width: 1200px;
             margin: 0 auto;
         }
@@ -64,7 +64,7 @@ li::after {
   </style>
 </head>
 <body>
-    <div class="page"></div>
+    <div class="page">
   <h1>This is a growing collection.</h1>
   <div class="grid">
     <a href="one/"><img src="images/Asset 5.png" alt="Asset 5"></a>
@@ -88,7 +88,7 @@ li::after {
     <a href="nineteen/"><img src="images/Asset 23.png" alt="Asset 23"></a>
     <a href="twenty/"><img src="images/Asset 24.png" alt="Asset 24"></a>
     <a href="twenty-one/"><img src="images/Asset 25.png" alt="Asset 25"></a>
-    
+    </div>
   </div>
 
     </style>
