--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a::after {
         body{
             font-family: 'DM Sans', sans-serif;
             margin: 0;
-            padding: 60 px;
+            padding: 20 15 px;
             background: #BBB1A5;
         }
         .page{
