color img border

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ a::after {
     }
     .grid img:hover {
       transform: scale(1.05);
+      border-color: #CCE100;
+      box-shadow: 0 0 12px #CCE100;
     }
     li::before,
 li::after {
