--- a/one/index.html
+++ b/one/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @font-face {
+      font-family: "Delusse_Family";
+      src: url("fonts/Delusse_Family/Delusse-Regular-Trial.otf") format("truetype");
+      font-weight: normal;
+    }
+
+    body {
+      font-family: "Delusse_Family", sans-serif;
+      color: #5E4C8C;
+    }
+    </style>
 </head>
 <body>
     "first image"
