--- a/one/index.html
+++ b/one/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
       font-family: "Delusse_Family";
-      src: url("fonts/Delusse_Family/Delusse-Regular-Trial.otf") format("truetype");
+      src: url("../fonts/Delusse_Family/Delusse-Regular-Trial.otf") format("opentype");
       font-weight: normal;
     }
 
