--- a/one/index.html
+++ b/one/index.html
@@ -10,6 +10,10 @@
       src: url("../fonts/Delusse_Family/Delusse-Regular-Trial.otf") format("opentype");
       font-weight: normal;
     }
+    h1{
+        font-family: "Delusse_Family", sans-serif;
+        color: #FF5C45;
+    }
 
     body {
       font-family: "Delusse_Family", sans-serif;
@@ -17,6 +21,7 @@
     }
     </style>
 </head>
+<h1>Brisk</h1>
 <body>
     "first image"
 </body>
