--- a/three/index.html
+++ b/three/index.html
@@ -12,7 +12,9 @@
     }
     h1{
         font-family: "Delusse_Family", sans-serif;
+        font-size: 80px;
         color: #FF5C45;
+        -webkit-text-stroke: 3px #222;
     }
 
     body {
