--- a/three/index.html
+++ b/three/index.html
@@ -11,8 +11,11 @@
       font-weight: normal;
     }
     h1{
-        font-family: "Delusse_Family", sans-serif;
-        font-size: 80px;
+            font-family: 'DM Sans', sans-serif;
+            margin: 0;
+            padding: 20 15 px;
+            background: #BBB1A5;
+        font-size: 200px;
         color: #FF5C45;
         -webkit-text-stroke: 1px #222;
     }
