--- a/three/index.html
+++ b/three/index.html
@@ -32,6 +32,7 @@
             width: 300px;        /* adjust size if needed */
             border-radius: 10px;
             object-fit: cover;
+            border: 3px #CCE100;
      }
     </style>
 </head>
