--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
-    <style>
-        ul, li {
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=DM+Sans:wght@100..1000&display=swap" rel="stylesheet">
+
+  <style>
+    ul, li {
       list-style: none;
     }
 
@@ -18,34 +20,30 @@
       outline: none;
     }
 
-    a::after {
-      content: none;
+    body {
+      font-family: 'DM Sans', sans-serif;
+      margin: 0;
+      padding: 20px 15px;
+      background: #BBB1A5;
     }
-    a::before,
-a::after {
-  content: none !important;
-}
-        body{
-            font-family: 'DM Sans', sans-serif;
-            margin: 0;
-            padding: 20 15 px;
-            background: #BBB1A5;
-        }
-        .page{
-            padding: 30px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        h1{
-            color: #CCE100;
-        }
-    
-        .grid{
-            display: grid;
-            grid-template-columns: repeat(4,1fr);
-            gap: 60px;
-        }
-        .grid img {
+
+    .page {
+      padding: 30px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      color: #CCE100;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      gap: 60px;
+    }
+
+    .grid img {
       width: 100%;
       height: auto;
       border-radius: 8px;
@@ -54,48 +52,41 @@ a::after {
       mix-blend-mode: screen;
       filter: brightness(0.8) sepia(1) hue-rotate(250deg) saturate(3);
     }
+
     .grid img:hover {
       transform: scale(1.5);
       border-color: #CCE100;
       box-shadow: 0 0 12px #CCE100;
     }
-    li::before,
-li::after {
-  content: none !important;
-}
   </style>
 </head>
+
 <body>
-    <div class="page">
-  <h1>This is a growing collection.</h1>
-  <div class="grid">
-    <a href="one/"><img src="images/Asset 5.png" alt="Asset 5"></a>
-    <a href="two/"><img src="images/Asset 6.png" alt="Asset 6"></a>
-    <a href="three/"><img src="images/Asset 7.png" alt="Asset 7"></a>
-    <a href="four/"><img src="images/Asset 8.png" alt="Asset 8"></a>
-    <a href="five/"><img src="images/Asset 9.png" alt="Asset 9"></a>
-    <a href="six/"><img src="images/Asset 10.png" alt="Asset 10"></a>
-    <a href="seven/"><img src="images/Asset 11.png" alt="Asset 11"></a>
-    <a href="eight/"><img src="images/Asset 12.png" alt="Asset 12"></a>
-    <a href="nine/"><img src="images/Asset 13.png" alt="Asset 13"></a>
-    <a href="ten/"><img src="images/Asset 14.png" alt="Asset 14"></a>
-    <a href="eleven/"><img src="images/Asset 15.png" alt="Asset 15"></a>
-    <a href="twelve/"><img src="images/Asset 16.png" alt="Asset 16"></a>
-    <a href="thirteen/"><img src="images/Asset 17.png" alt="Asset 17"></a>
-    <a href="fourteen/"><img src="images/Asset 18.png" alt="Asset 18"></a>
-    <a href="fifteen/"><img src="images/Asset 19.png" alt="Asset 19"></a>
-    <a href="sixteen/"><img src="images/Asset 20.png" alt="Asset 20"></a>
-    <a href="seventeen/"><img src="images/Asset 21.png" alt="Asset 21"></a>
-    <a href="eighteen/"><img src="images/Asset 22.png" alt="Asset 22"></a>
-    <a href="nineteen/"><img src="images/Asset 23.png" alt="Asset 23"></a>
-    <a href="twenty/"><img src="images/Asset 24.png" alt="Asset 24"></a>
-    <a href="twenty-one/"><img src="images/Asset 25.png" alt="Asset 25"></a>
+  <div class="page">
+    <h1>This is a growing collection.</h1>
+
+    <div class="grid">
+      <a href="one/"><img src="images/Asset 5.png" alt="Asset 5"></a>
+      <a href="two/"><img src="images/Asset 6.png" alt="Asset 6"></a>
+      <a href="three/"><img src="images/Asset 7.png" alt="Asset 7"></a>
+      <a href="four/"><img src="images/Asset 8.png" alt="Asset 8"></a>
+      <a href="five/"><img src="images/Asset 9.png" alt="Asset 9"></a>
+      <a href="six/"><img src="images/Asset 10.png" alt="Asset 10"></a>
+      <a href="seven/"><img src="images/Asset 11.png" alt="Asset 11"></a>
+      <a href="eight/"><img src="images/Asset 12.png" alt="Asset 12"></a>
+      <a href="nine/"><img src="images/Asset 13.png" alt="Asset 13"></a>
+      <a href="ten/"><img src="images/Asset 14.png" alt="Asset 14"></a>
+      <a href="eleven/"><img src="images/Asset 15.png" alt="Asset 15"></a>
+      <a href="twelve/"><img src="images/Asset 16.png" alt="Asset 16"></a>
+      <a href="thirteen/"><img src="images/Asset 17.png" alt="Asset 17"></a>
+      <a href="fourteen/"><img src="images/Asset 18.png" alt="Asset 18"></a>
+      <a href="fifteen/"><img src="images/Asset 19.png" alt="Asset 19"></a>
+      <a href="sixteen/"><img src="images/Asset 20.png" alt="Asset 20"></a>
+      <a href="seventeen/"><img src="images/Asset 21.png" alt="Asset 21"></a>
+      <a href="eighteen/"><img src="images/Asset 22.png" alt="Asset 22"></a>
+      <a href="nineteen/"><img src="images/Asset 23.png" alt="Asset 23"></a>
+      <a href="twenty/"><img src="images/Asset 24.png" alt="Asset 24"></a>
+      <a href="twenty-one/"><img src="images/Asset 25.png" alt="Asset 25"></a>
     </div>
   </div>
-
-    </style>
-</head>
-<body>
-    hello world!
 </body>
-</html>
