--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
   <div class="page">
     <h1>This is a growing collection.</h1>
 
+      <div id="poem">
+    <span class="line">After slow death</span>
+    <span class="line">Love must clean house</span>
+    <span class="line">Choose memories to keep</span>
+    <span class="line">And memories to let go</span>
+    <span class="line">Give each lamentation</span>
+    <span class="line">An ear to hear</span>
+    <span class="line">A heart to lay rest</span>
+    <span class="line">Let no soul forget</span>
+    <span class="line">An eternity of desire awaits</span>
+  </div>
+
     <div class="grid">
       <a href="one/"><img src="images/Asset 5.png" alt="Asset 5"></a>
       <a href="two/"><img src="images/Asset 6.png" alt="Asset 6"></a>
