--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
     #poem {
       max-width: 700px;
       margin-bottom: 40px;
-      font-family: 'Caveat', cursive;
+      font-family: 'DM Sans'
       font-size: 1.8rem;
-      line-height: 2.2rem;
-      color: #222;
+      color: #CCE100;
     }
 
     #poem p {
