--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     #poem span:hover {
       transform: rotate(180deg) scale(1.2);
-      color: #CCE100;
+      color: #FF5C45;
     }
 
     /* Grid gallery */
