--- a/index.html
+++ b/index.html
@@ -24,31 +24,33 @@
     body {
       font-family: 'DM Sans', sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 10px;
       background: #BBB1A5;
     }
 
     .page {
-      padding: 20px;
+      padding: 10px;
       max-width: 1200px;
       margin: 0 auto;
     }
 
     h1 {
       color: #CCE100;
+      margin-bottom: 20px;
     }
 
     /* Poem styling */
     #poem {
       max-width: 700px;
-      margin-bottom: 40px;
-      font-family: 'DM Sans'
-      font-size: 1.8rem;
+      margin-bottom: 20px;
+      font-family: 'Caveat', cursive;
+      font-size: 1.6rem;
+      line-height: 1.8rem;
       color: #CCE100;
     }
 
     #poem p {
-      margin: 0 0 10px 0;
+      margin: 0 0 6px 0; /* tighter spacing between lines */
     }
 
     #poem span {
@@ -66,7 +68,7 @@
     .grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: 60px;
+      gap: 30px; /* less gap for tighter layout */
     }
 
     .grid img {
