--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
     h1 {
       color: #CCE100;
+            font-family: 'DM Sans', sans-serif;
+            margin: 0;
+            padding: 20px 15px;
+            font-size: 200px;
+            color: #FF5C45;
+            -webkit-text-stroke: 1px #222;
     }
 
     /* Poem styling */
