--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             font-size: 200px;
             color: #FF5C45;
             -webkit-text-stroke: 1px #222;
+            line-height: 0.9;
     }
 
     /* Poem styling */
