fixed eli brenna

--- a/three/index.html
+++ b/three/index.html
@@ -61,14 +61,14 @@
 </head>
 <body>
 
-<img src="../images/Asset 6.png" class="top-right-img" alt="">
+<img src="../images/Asset 7.png" class="top-right-img" alt="">
 
 <h1>Brisk</h1>
 
 <button id="playBtn">Play</button>
 
 <audio id="storyAudio">
-    <source src="../audio/brenna.m4a" type="audio/mp4">
+    <source src="../audio/eli.m4a" type="audio/mp4">
     Your browser does not support the audio tag.
 </audio>
 
