--- a/five/index.html
+++ b/five/index.html
@@ -11,7 +11,7 @@
             font-weight: normal;
         }
 
-        h1{
+        h1 {
             font-family: 'DM Sans', sans-serif;
             margin: 0;
             padding: 20px 15px;
@@ -37,8 +37,8 @@
             object-fit: cover;
         }
         .top-right-img:hover {
-  transform: rotate(360deg) scale(1.05);
-}
+            transform: rotate(360deg) scale(1.05);
+        }
 
         #playBtn {
             background: #FF5C45;
@@ -53,7 +53,6 @@
         }
 
         #playBtn:hover {
-            font-family: 'DM Sans', sans-serif;
             background: #CCE100;
             color: #FF5C45;
         }
@@ -67,13 +66,14 @@
 
 <button id="playBtn">Play</button>
 
-<audio id="storyAudio">
+<audio id="storyAudio" controls>
     <source src="../audio/brooke.m4a" type="audio/mp4">
     Your browser does not support the audio tag.
 </audio>
 
 <p>
-This is a picture of me and my niece on that day she was born. It is one of my favorite pictures from one of the best days ever and my favorite and happiest memories to date. 
+This is a picture of me and my niece on the day she was born. It is one of my favorite pictures from one of the best days ever and my favorite and happiest memories to date.
+</p>
 
 <script>
     const playBtn = document.getElementById("playBtn");
