--- a/four/index.html
+++ b/four/index.html
@@ -74,6 +74,8 @@
 
 <p>
 This was a family brunch that took place the morning after Ella’s Bat mitzvah and I am feeling a combination of total love and joy but also on the verge of tears because I was very sad that my step dad would be heading back to LA and I was anticipating missing him a lot. 
+
+<script>
     const playBtn = document.getElementById("playBtn");
     const audio = document.getElementById("storyAudio");
 
