--- a/eleven/index.html
+++ b/eleven/index.html
@@ -63,7 +63,7 @@
 
 <img src="../images/Asset 15.png" class="top-right-img" alt="">
 
-<h1>Published</h1>
+<h1>Onto the Next</h1>
 
 <button id="playBtn">Play</button>
 
