--- a/twenty/index.html
+++ b/twenty/index.html
@@ -63,7 +63,7 @@
 
 <img src="../images/Asset 24.png" class="top-right-img" alt="">
 
-<h1>Steamed</h1>
+<h1>Polar Plunge</h1>
 
 <button id="playBtn">Play</button>
 
