--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             font-family: 'DM Sans', sans-serif;
             margin: 0;
             padding: 20px 15px;
-            font-size: 200px;
+            font-size: 120px;
             color: #FF5C45;
             -webkit-text-stroke: 1px #222;
             line-height: 0.9;
@@ -93,7 +93,7 @@
 </head>
 <body>
   <div class="page">
-    <h1>This is a growing collection.</h1>
+    <h1>I asked family and friends about a memorable moment from their lives. This is a growing collection.</h1>
 
     <!-- Poem -->
     <div id="poem">
