--- a/eighteen/index.html
+++ b/eighteen/index.html
@@ -45,7 +45,7 @@
 
 <img src="../images/Asset 22.png" class="top-right-img" alt="">
 
-<h1>Kenny</h1>
+<h1>Beach Night</h1>
 
 <p>
 This was an evening when I was living in Australia. My roommates and I planned a barbecue at the beach with a lot of our friends. We cooked chicken and veggies on the barbecue and made guac for everyone. Before the sunset we ran to the water and swam in the waves for a while and had so much fun! One of my friends took this on her film camera and it was so fun to see it when she got it developed a few weeks later. I was really happy and content with where I was and who I was with.  
